@@ -1,3 +1,11 @@
+2010-03-28  Joe English  <jenglish@users.sourceforge.net>
+
+	* generic/ttk/ttkTagSet.c, generic/ttk/ttkTheme.c,
+	generic/ttk/ttkTheme.h, generic/ttk/ttkTreeview.c,
+	generic/ttk/ttkWidget.h, doc/ttk_treeview.n,
+	tests/ttk/treetags.test: ttk::treeview widget: add 'tag names',
+	'tag add', and 'tag remove' methods.
+
 2010-03-23  Donal K. Fellows  <dkf@users.sf.net>
 
 	* unix/configure.in, unix/Makefile.in: [Bug 2965133]: Get rid of the
@@ -534,7 +542,7 @@
 	* unix/configure:	(regenerated)
 
 2009-12-22  Joe English  <jenglish@users.sourceforge.net>
-	
+
 	* library/ttk/sizegrip.tcl: [Bug 2912356]: Patch to avoid bizarro
 	behavior under compiz.
 
